fixed twenty nineteen heading separator overlapping issue

--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -1,10 +1,10 @@
 .exclusive-addons-elementor {
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
 }
 
+
 /* Style for removing Twenty Nineteen Theme heading border */
-h1:not(.site-title):before, h2:before {
+.exclusive-addons-elemento h1:not(.site-title):before, .exclusive-addons-elementor h2:before {
   content: none;
 }
 
